Style prices, add color, icons and new title

--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@
 <!---------I got the code for this gallery from the following website and adjusted it
 for my own gallery. I used the masonry effect listed on the page. 
  https://wpdatatables.com/css-image-gallery/. ---------------------------------->
-
+<div></div>
 
     <div class="gallery" id="gallery">
         <div class="gallery-item">
