--- a/prices.html
+++ b/prices.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="description" content="Dog Grooming services"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>DoggyStyle</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Dog Grooming services" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>DoggyStyle</title>
 </head>
-<body>
-<div class="parallax">
+
+<body class="parallax">
     <header>
 
-    <!--------------------------------- Navbar - Bootstrap ------------------->
+        <!--------------------------------- Navbar - Bootstrap ------------------->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand ml-auto" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,84 +26,175 @@
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-            <!-- I found this bit of code on stackoverflow which helped me understand how to display the active page link. 
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <!-- I found this bit of code on stackoverflow which helped me understand how to display the active page link. 
                 https://stackoverflow.com/questions/17318170/highlighting-the-current-page-in-a-list-of-links-using-css-html  -->
-                <li class="nav-item">  
-                    <a class="nav-link " href="index.html"><i class="fas fa-home"></i><span>Home</span></a>
-                </li>
-                <li class="nav-item current">
-                    <a class="nav-link" href="prices.html"><i class="fas fa-paw"></i><span>Prices</span></a>
-                </li>
-                <li class="nav-item">
-                    
-                    <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i><span>Gallery</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html"><i class="fas fa-phone"></i><span>Contact</span></a>
-                </li>
-            </ul>
+                    <li class="nav-item">
+                        <a class="nav-link " href="index.html"><i class="fas fa-home"></i><span>Home</span></a>
+                    </li>
+                    <li class="nav-item current">
+                        <a class="nav-link" href="prices.html"><i class="fas fa-paw"></i><span>Prices</span></a>
+                    </li>
+                    <li class="nav-item">
+
+                        <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i><span>Gallery</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html"><i class="fas fa-phone"></i><span>Contact</span></a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
-<!-- -----------------------------Prices page -------------------------------->
+    <!-- -----------------------------Prices page -------------------------------->
 
     <div class="container-fluid" id="main-prices">
-            <img src="assets/images/pricesbone.png">
-                <div class="row">
-                    <div class="list-unstyled" id="prices-banner">
-                        <ol>
-                            <li>    Airedale Terrier 	€70 	</li>
-                            <li>	Akita from 	€80 	</li>
-                            <li>	Basset Hound 	€45 	</li>
-                            <li>	Beagle 	€45 	</li>
-                            <li>	Bernese Mountain Dog	€100 	</li>
-                            <li>	Bichon Frise  	€55 	</li>
-                            <li>	Border Collie 	€55 	</li>
-                            <li>	Border Terier 	€50 	</li>
-                            <li>	Boxer 	€45 	</li>
-                            <li>	Bulldog  	€40 	<li>
-                            <li>	Bullmastiff  	€55 	</li>
-                            <li>	Cairn Terrier 	€50 	</li>
-                            <li>	Cavalier King Charles 	€50 	</li>
-                            <li>	Cavachon 	€50 	</li>
-                            <li>	Cavapoo 	€50 	</li>
-                            <li>	Cocker Spaniel 	€60 	</li>
-                            <li>	Cockerpoo 	€65 	</li>
-                            <li>	Collie Rough from 	€70 	</li>
-                            <li>	Chihuahua – Long coat 	€45 	</li>
-                            <li>	Chihuahua – Short coat 	€35 	</li>
-                            <li>	Corgi 	€50 	</li>
-                            <li>	Dalmatian  	€45 	</li>
-                            <li>	Dachshund Smooth 	€35 	</li>
-                            <li>	Dachshund Long Hair 	€50 	</li>
-                            <li>	Doberman Pinscher 	€50 	</li>
-                            <li>	Dogue de Bordeaux 	€55 	</li>
-                            <li>	Fox Terrier – Smooth  	€40 	</li>
-                            <li>	Fox Terrier – Wire	€60 	</li>
-                            <li>	French Bulldog	€35 	</li>
-                            <li>	German Shepherd – Long 	€70 	</li>
-                            <li>	Havanese	€50 	</li>
-                            <li>	Irish Wolfhound 	€75 	</li>
-                            <li>	Golden Retriever 	€65 	</li>
-                            <li>	German Shep shrt	€60 	</li>
-                            <li>	Great Dane 	€55 	</li>
-                            <li>	Greyhound  	€45 	</li>
-                            <li>	Jack Russell 	€35 	</li>
-                            <li>	Kerry Blue	€60 	</li>
-                            <li>	Labrador  	€55 	</li>
-                            <li>	Labradoodle Sm 	€65 	</li>
-                            <li>	Labradoodle Md	€75 	</li>
-                            <li>	Labradoodle Lrg	€85 	</li>
-                            <li>	Lhasa Apso 	€50 	</li>
-                            <li>	Malamutes	€100 	</li>    
-                        </ol>  
-                    </div>
-                </div>
+        <div class="image-container">
+            <img src="assets/images/pricesbone1.png">
+            <p>Prices</p>
+        </div>
+        <div class="row">
+            <div class="list-unstyled" id="prices-banner">
+                <ol>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Airedale Terrier</span><span>€70</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Airedale Terrier</span><span>€70</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Akita</span><span>€80</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Basset Hound</span><span>€45</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Beagle</span><span>€45</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Bermese Mtn Dog</span><span>€100</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Bichon Frise</span><span>€55</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Border Collie</span><span>€55</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Border Terier</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Boxer</span><span>€45</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Bulldog</span><span>€40</span></div>
+                    <li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Bullmastiff</span><span>€55</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Cairn Terrier</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Cavalier King Charles</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Cavachon</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Cavapoo</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Cocker Spaniel</span><span>€60</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Cockerpoo</span><span>€65</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Collie Rough</span><span>€70</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Chihuahua – Lng coat</span><span>€45</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Chihuahua – Sht coat</span><span>€35</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Corgi</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Dalmatian</span><span>€45</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Dachshund Smooth</span><span>€35</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Dachshund Long Hair</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Doberman Pinscher</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Dogue de Bordeaux</span><span>€55</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Fox Terrier – Smooth</span><span>€40</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Fox Terrier – Wire</span><span>€60</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> French Bulldog</span><span>€35</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> German Shep – Lng</span><span>€70</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Havanese</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Irish Wolfhound</span><span>€75</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Golden Retriever</span><span>€65</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> German Shep shrt</span><span>€60</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Great Dane</span><span>€55</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Greyhound</span><span>€45</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Jack Russell</span><span>€35</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Kerry Blue</span><span>€60</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Labrador</span><span>€55</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Labradoodle Sm</span><span>€65</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Labradoodle Md</span><span>€75</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Labradoodle Lrg</span><span>€85</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Lhasa Apso</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Malamutes</span><span>€100</span></div>
+                    </li>
+                </ol>
             </div>
         </div>
     </div>
-
     <!-- ----------------------------Footer -------------------------------->
     <footer>
         <div class="container-fluid" id="footer-row">
@@ -124,11 +215,9 @@
         </div>
     </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</div>
-</body>
-</html>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body></html>
 
 
