Change layout to flexbox for better response

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="description" content="Dog Grooming services"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>DoggyStyle</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Dog Grooming services" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>DoggyStyle!!!</title>
 </head>
-<body>
-<div class="parallax">
+
+<body class="parallax">
     <header>
-    <!--------------------------------- Navbar - Bootstrap ------------------->
+        <!--------------------------------- Navbar - Bootstrap ------------------->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand ml-auto" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,69 +26,65 @@
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-            <!-- I found this bit of code on stackoverflow which helped me understand how to display the active page link. 
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <!-- I found this bit of code on stackoverflow which helped me understand how to display the active page link. 
                 https://stackoverflow.com/questions/17318170/highlighting-the-current-page-in-a-list-of-links-using-css-html  -->
-                <li class="nav-item current">  
-                    <a class="nav-link " href="index.html"><i class="fas fa-home"></i><span>Home</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="prices.html"><i class="fas fa-paw"></i><span>Prices</span></a>
-                </li>
-                <li class="nav-item">
-                    
-                    <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i><span>Gallery</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-phone"></i><span>Contact</span></a>
-                </li>
-            </ul>
+                    <li class="nav-item current">
+                        <a class="nav-link " href="index.html"><i class="fas fa-home"></i><span>Home</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="prices.html"><i class="fas fa-paw"></i><span>Prices</span></a>
+                    </li>
+                    <li class="nav-item">
+
+                        <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i><span>Gallery</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fas fa-phone"></i><span>Contact</span></a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
-<!-- -----------------------------Home page -------------------------------->
+    <!-- -----------------------------Home page -------------------------------->
 
-    <div class="container" id="main-home">
-        <div class="row">
-            <div class="text-field" id="main-banner">
+
+    <div class="home-container">
+        <div class="main-message order-2 order-md-1">
             <h1>Grubby Dog?</h1>
-            <p>We’ll get them clean in a jiffy! Leave your fur baby with us for 
-            the ultimate doggy day spa experience. Guaranteed to leave with a 
-            wagging tail.
+            <p>We’ll get them clean in a jiffy! Leave your fur baby with us for
+                the ultimate doggy day spa experience. Guaranteed to leave with a
+                wagging tail. <br>
+                <i class="fas fa-shower"></i><i class="fas fa-cut"></i>
             </p>
-            <i class="fas fa-shower"></i><button type="button" class="call-button">Make Appointment</button><i class="fas fa-cut"></i>
-            </div>
-            <div id="dogwash">
-                <img src="../../assets/images/dogwash.png">
-            </div>
+            
+            <span><button type="button" class="call-button">Make Appointment</button></span>
+        </div>
+
+        <div class="order-1 order-md-2">
+            <img src="../../assets/images/dogwash.png">
         </div>
     </div>
 
+
     <!-- ----------------------------Footer -------------------------------->
-    <footer>
-        <div class="container-fluid" id="footer-row">
-            <div class="row">
-                <div class="col-sm footer-element" id="contact-details">
-                    Phone: 0875553555 <br> Email: info@doggystyle.ie
-                </div>
-                <div class="col-sm" id="call-button-container">
-                    <button type="button" class="call-button footer-element">Contact DoggyStyle</button>
-                </div>
-                <div class="col-sm footer-element" id="social-icons">
-                    <i class="fab fa-twitter-square"></i>
-                    <i class="fab fa-instagram-square"></i>
-                    <i class="fab fa-facebook-square"></i>
-                    <i class="fab fa-youtube"></i>
-                </div>
+    <footer class="footer mt-auto" id="footer-row">
+        <div class="row">
+            <div class="col-sm footer-element" id="contact-details">
+                Phone: 0875553555 <br> Email: info@doggystyle.ie
+            </div>
+            <div class="col-sm" id="call-button-container">
+                <button type="button" class="call-button footer-element">Contact DoggyStyle</button>
+            </div>
+            <div class="col-sm footer-element" id="social-icons">
+                <i class="fab fa-twitter-square"></i>
+                <i class="fab fa-instagram-square"></i>
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-youtube"></i>
             </div>
         </div>
     </footer>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</div>
-</body>
-</html>
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body></html>
