Add social link url to footers

--- a/gallery.html
+++ b/gallery.html
@@ -51,8 +51,8 @@
     </header>
 <!-- -----------------------------Gallery page -------------------------------->
 
-<!---------I got the code for this gallery from the following website and adjusted it
-for my own gallery. I used the masonry effect listed on the page. 
+<!---------I got the code for this gallery from the following website and altered it
+for my own use. I used the masonry effect listed on the page. 
  https://wpdatatables.com/css-image-gallery/. ---------------------------------->
 <div></div>
 
@@ -121,21 +121,20 @@ for my own gallery. I used the masonry effect listed on the page.
                     <button type="button" class="call-button footer-element">Contact DoggyStyle</button>
                 </div>
                 <div class="col-sm footer-element" id="social-icons">
-                    <i class="fab fa-twitter-square"></i>
-                    <i class="fab fa-instagram-square"></i>
-                    <i class="fab fa-facebook-square"></i>
-                    <i class="fab fa-youtube"></i>
+                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </div>
     </footer>
-<script src="gallery.js"></script>
-
 <script src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="gallery.js"></script>
 </div>
 </body>
 </html>
