--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i><span>Gallery</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-phone"></i><span>Contact</span></a>
+                        <a class="nav-link" href="contact.html"><i class="fas fa-phone"></i><span>Contact</span></a>
                     </li>
                 </ul>
             </div>
@@ -77,10 +77,10 @@
                 <button type="button" class="call-button footer-element">Contact DoggyStyle</button>
             </div>
             <div class="col-sm footer-element" id="social-icons">
-                <i class="fab fa-twitter-square"></i>
-                <i class="fab fa-instagram-square"></i>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-youtube"></i>
+                <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
     </footer>
