--- a/prices.html
+++ b/prices.html
@@ -205,10 +205,10 @@
                     <button type="button" class="call-button footer-element">Contact DoggyStyle</button>
                 </div>
                 <div class="col-sm footer-element" id="social-icons">
-                    <i class="fab fa-twitter-square"></i>
-                    <i class="fab fa-instagram-square"></i>
-                    <i class="fab fa-facebook-square"></i>
-                    <i class="fab fa-youtube"></i>
+                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </div>
