Fix issue with prices div bottom hidden below footer

--- a/prices.html
+++ b/prices.html
@@ -194,6 +194,9 @@
             </div>
         </div>
     </div>
+        <!-- I put this 'empty space div below the contact form as I was having a problem with scrolling
+            as the bottom of the price container was dragging up white space instead of showing the background ---->
+    <div class="empty-space"></div>
     <!-- ----------------------------Footer -------------------------------->
     <footer>
         <div class="container-fluid" id="footer-row">
